[fix] navigation overflow

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -85,6 +85,7 @@
 
 				@media only screen and(min-width: 768px) {
 					flex-direction: row;
+					line-height: 1.2rem;
 				}
 			}
 
